--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "How basic is your music taste is a website that connects with the spotify API to determine how plain someones listening experience is. Someone who listens only to popular artists like Drake, Taylor Swift, Bad Bunny,may be described as basic. If you listen only to deep cuts, music that is less popular or from obscure artitst you are less basic.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ty-Oustrich/startup.git"
@@ -20,6 +22,9 @@
   "homepage": "https://github.com/Ty-Oustrich/startup#readme",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0"
   }
 }
