--- a/musictaste/package.json
+++ b/musictaste/package.json
@@ -3,19 +3,28 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": "",
   "devDependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite": "^6.2.5"
-  }
+  },
+  "dependencies": {
+    "esbuild": "^0.25.2",
+    "nanoid": "^3.3.11",
+    "picocolors": "^1.1.1",
+    "postcss": "^8.5.3",
+    "react-router-dom": "^7.5.0",
+    "rollup": "^4.39.0",
+    "scheduler": "^0.26.0",
+    "source-map-js": "^1.2.1"
+  },
+  "description": ""
 }
