--- a/musictaste/package.json
+++ b/musictaste/package.json
@@ -18,6 +18,7 @@
     "vite": "^6.2.5"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "esbuild": "^0.25.2",
     "nanoid": "^3.3.11",
     "picocolors": "^1.1.1",
