--- a/musictaste/package.json
+++ b/musictaste/package.json
@@ -18,15 +18,22 @@
     "vite": "^6.2.5"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "esbuild": "^0.25.2",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "nanoid": "^3.3.11",
+    "node-fetch": "^3.3.2",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.3",
+    "querystring": "^0.2.1",
     "react-router-dom": "^7.5.0",
     "rollup": "^4.39.0",
     "scheduler": "^0.26.0",
-    "source-map-js": "^1.2.1"
+    "source-map-js": "^1.2.1",
+    "uuid": "^11.1.0"
   },
   "description": ""
 }
