--- a/musictaste/package.json
+++ b/musictaste/package.json
@@ -24,6 +24,7 @@
     "esbuild": "^0.25.2",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "mongodb": "^6.15.0",
     "nanoid": "^3.3.11",
     "node-fetch": "^3.3.2",
     "picocolors": "^1.1.1",
