--- a/musictaste/service/package.json
+++ b/musictaste/service/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "express": "^4.18.2",
+    "mongodb": "^6.12.0",
     "node-fetch": "^3.3.2",
     "uuid": "^11.1.0"
   },
